# aiokarakeep

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_CHECKLIST.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aiokarakeep/: __init__.py  client.py  exceptions.py  models.py
tests/: test_client.py
